<resources>
    <string name="app_name">MoneyManager</string>
    <string name="settings">Settings</string>
    <string name="add_entry">Add Entry</string>
    <string name="add_image">Add Image</string>
    <string name="amount">Amount</string>
    <string name="description">Description</string>
    <string name="money">Money</string>
    <string name="date">Date</string>
    <string name="total_amount">Total Amount</string>
    <string name="total_amount_">Total Amount:</string>
    <string name="remove_entry">Remove Entry</string>
    <string name="search">Search</string>
    <string name="total">Total:</string>
</resources>